--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 	<title></title>
 </head>
 <body>
-<div>
-	azul
-	<div>
+<div style="background-color : blue; width:100%;height:1024px;">
+	
+	<div style="background-color : red; width:100%;height:200px;">
 		
-		rojo
+		
 	</div>
 
-	<div>
-		amarillo
+	<div style="background-color : yellow; width:100%;height:650px;">
+		
 	</div>
-	<div>
-		verde
+	<div style="background-color : green; width:100%;height:200px";>
+		
 	</div>
 
 
